--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 
               <heading>Research</heading>
 <p>
-  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and then <b>scaling their memory capability for intelligence's long-range behaviors.</b> 
-  My previous research explores the training principles of deep learning across diverse modalities, steering them toward prosocial and stable behaviors.
+  I am passionate about scaling the <b>cognitive reasoning capabilities</b> of foundation models, particularly supporting their <b>memory capacity and long-range behaviors.</b>
 </p>
 
 
