--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               <heading>Research</heading>
 <p>
-  I am passionate about scaling the <b>cognitive reasoning capabilities</b> of foundation models, particularly supporting their <b>memory capacity and long-range behaviors.</b>
+  I am passionate about <b>scaling modular cognitive architectures</b> of foundation models, particularly supporting their <b>memory capacity</b> and <b>long-range behaviors.</b>
 </p>
 
 
