--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		<br>Extending my working memory module study from EMNLP'24 to multimodal LLMs to enlarger their memory capabilities.
               <br>
               <br>
-              <a href="https://drive.google.com/file/d/12aPkYhu2fVS4g8bWNMNkXRcIvZYDJ_rA/view?usp=sharing">project page</a>
+              <a href="https://github.com/xid32/NAACL_2025_TWM">project page</a>
               /
               <a href="https://xid32.github.io/images/publications/Temporal_Working_Memory.pdf">preprint</a>
               <p></p>
