--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
               </a>
               <br>
               <b>Chunhui Zhang*</b>, Yiren Jian*, Zhongyu Ouyang, Soroush Vosoughi
-              <br>
-                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>
-	     <br>
+	      <br>
+	      <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference</em> – <strong>Oral Presentation</strong>.
+	      <br>
 	     <br>Using RL to post-train a Top-2 best multimodal captioner on PaperswithCode Leaderboard and beating industry-level captioners
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
@@ -247,9 +247,9 @@
               </a>
               <br>
               Ivory Yang, Weicheng Ma, <b>Chunhui Zhang</b>, Soroush Vosoughi
-              <br>
-                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>
-              <br>
+	      <br>
+	      <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference</em> – <strong>Oral Presentation</strong>.
+	      <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
               <a href="https://drive.google.com/file/d/1X2ZhJTzDQVkPnRedJJQJB_hHOECtqPUI/view?usp=sharing">project page</a>
