--- a/index.html
+++ b/index.html
@@ -140,6 +140,45 @@
               <p></p>
             </td>
           </tr>
+
+	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/reasoning.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Superficial Self-Improved Reasoners Benefit from Model Merging</papertitle>
+              </a>
+              <br>
+              Xiangchi Yuan, <b>Chunhui Zhang</b>, Zheyuan Liu, Dachuan Shi, Soroush Vosoughi, Wenke Lee
+              <br>
+                <em>Preprint</em>.
+              <br>
+              <br>
+              <a href="https://arxiv.org/pdf/2503.02103">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2503.02103">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+	  
 	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
