--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <papertitle>Overcoming Multi-step Complexity in Theory-of-Mind Reasoning: A Scalable Bayesian Planner</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Sean Dae Houlihan, Kwonjoon Lee, Nakul Agarwal, Zhongyu Ouyang, {Soroush Vosoughi, Shao-Yuan Lo}
+              <b>Chunhui Zhang</b>, Zhongyu Ouyang, Sean Dae Houlihan, Kwonjoon Lee, Nakul Agarwal, {Soroush Vosoughi, Shao-Yuan Lo}
               <br>
                 <em>Preprint</em>.
               <br>
