--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               <br>
               Yiren Jian, Tingkai Liu, Yunzhe Tao, <b>Chunhui Zhang</b>, Soroush Vosoughi, Hongxia Yang
               <br>
-                <em>Annual Meeting of the Association for Computational Linguistics (ACL), 2024</em>.
+                <em>Annual Meeting of the Association for Computational Linguistics (ACL), 2024</em>  – <strong>Oral Presentation</strong>.
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
