--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
 
                 <heading>Posts</heading>
-<!--            <p>-->
-<!--            <span style="font-style: italic;">[Jan 23, 2024]</span> One paper accepted to The Web Conference 2024 (controllable unlearning the vision models). Congrats to all co-authors and thank you all for letting me learn a lot!-->
-<!--            </p>-->
+<p>
+  <span style="font-style: italic;">[Apr 23, 2025]</span> I’ve released the project on GitHub: <a href="https://github.com/chunhuizng/audio-long-form-reasoner" target="_blank">audio-long-form-reasoner</a>
+<br>
 <p>
   <span style="font-style: italic;">[Jan 22, 2025]</span> Three papers are accepted to NAACL 2025. Thanks to my excellent collaborators and see you in Albuquerque!
-<br>
+<br>	
                 <p>
   <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators and see you in Miami!
 <br>
