--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
                 <heading>Posts</heading>
 <p>
-  <span style="font-style: italic;">[Apr 23, 2025]</span> I’ve released the project on GitHub: <a href="https://github.com/chunhuizng/audio-long-form-reasoner" target="_blank">audio-long-form-reasoner</a>
+  <span style="font-style: italic;">[Apr 23, 2025]</span> I’ve released the project on GitHub: <a href="https://github.com/chunhuizng/audio-long-form-reasoner" target="_blank">audio-long-form-reasoner. First to implement Qwen2.5-Omni and vLLM for faster RL reasoning across audio and other unified modalities.</a>
 <br>
 <p>
-  <span style="font-style: italic;">[Jan 22, 2025]</span> Three papers are accepted to NAACL 2025. Thanks to my excellent collaborators and see you in Albuquerque!
+  <span style="font-style: italic;">[Jan 22, 2025]</span> Three papers are accepted to NAACL 2025. Thanks to my excellent collaborators. See you in Albuquerque!
 <br>	
                 <p>
-  <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators and see you in Miami!
+  <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators. See you in Miami!
 <br>
 <p>
              <span style="font-style: italic;">[Sep 7, 2024]</span> Completed my summer internship at the Honda Research Institute in San Jose, CA. I am grateful for the collaborative experience with Dr. Shao-Yuan Lo and happy to have met great friends in the Bay Area.
