--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
               <a href="https://github.com/chunhuizng/mllm-video-captioner">project page</a>
               /
               <a href="https://arxiv.org/pdf/2502.13363">preprint</a>
+	      /
+              <a href="data/naacl-video-captioner-slides.pdf">slides</a>
               <p></p>
             </td>
           </tr>
