--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
                 <heading>Posts</heading>
 <p>
+  <span style="font-style: italic;">[May 1, 2025]</span> Spotlight at ICML 2025! Thanks to my excellent collaborators. Vancouver, here we come again! P.S. Catch me in ABQ today!
+<br>	
+<p>
   <span style="font-style: italic;">[Apr 23, 2025]</span> I’ve released the project on GitHub: <a href="https://github.com/chunhuizng/audio-long-form-reasoner" target="_blank">audio-long-form-reasoner. First to implement Qwen2.5-Omni and vLLM for faster RL reasoning across audio and other unified modalities.</a>
 <br>
 <p>
@@ -129,9 +132,9 @@
                 <papertitle>Overcoming Multi-step Complexity in Theory-of-Mind Reasoning: A Scalable Bayesian Planner</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Zhongyu Ouyang, Sean Dae Houlihan, Kwonjoon Lee, Nakul Agarwal, {Soroush Vosoughi, Shao-Yuan Lo}
-              <br>
-                <em>Preprint</em>.
+              <b>Chunhui Zhang</b>, Zhongyu Ouyang, Kwonjoon Lee, Nakul Agarwal, Sean Dae Houlihan, {Soroush Vosoughi, Shao-Yuan Lo}
+              <be>
+        	<em>Forty-Second International Conference on Machine Learning (ICML), 2025</em>.
               <br>
               <br>
               <a href="https://anonymous.4open.science/r/scale-bayesian-tom-248B">project page</a>
