--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <br>
               <b>Chunhui Zhang</b>, Zhongyu Ouyang, Kwonjoon Lee, Nakul Agarwal, Sean Dae Houlihan, {Soroush Vosoughi, Shao-Yuan Lo}
               <be>
-        	<em>Forty-Second International Conference on Machine Learning (ICML), 2025</em>.
+        	<em>Forty-Second International Conference on Machine Learning (ICML), 2025</em> – <strong>Spotlight</strong>.
               <br>
               <br>
               <a href="https://anonymous.4open.science/r/scale-bayesian-tom-248B">project page</a>
@@ -255,7 +255,7 @@
               <br>
                 <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Findings.</em>
 		<br>
-		<br>Extending my working memory module study from EMNLP'24 to multimodal LLMs to enlarger their memory capabilities.
+		<br>Extending my working memory module study from EMNLP'24 to multimodal LLMs to enlarge their memory capabilities.
               <br>
               <br>
               <a href="https://github.com/xid32/NAACL_2025_TWM">project page</a>
