--- a/index.html
+++ b/index.html
@@ -106,42 +106,42 @@
           </tr>
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
-<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/tom.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function fdnas_start() {
-                  document.getElementById('fdnas_image').style.opacity = "1";
-                }
-
-                function fdnas_stop() {
-                  document.getElementById('fdnas_image').style.opacity = "0";
-                }
-                fdnas_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="">
-                <papertitle>Overcoming Multi-step Complexity in Theory-of-Mind Reasoning: A Scalable Bayesian Planner</papertitle>
-              </a>
-        <be>
-  	<b>Chunhui Zhang</b>, Zhongyu Ouyang, Kwonjoon Lee, Nakul Agarwal, Sean Dae Houlihan, Soroush Vosoughi, Shao-Yuan Lo
-  	<be> 
-  	<em>Forty-Second International Conference on Machine Learning (ICML), 2025</em> – <strong>Spotlight</strong>.
-  	<br><br>
-              <a href="https://anonymous.4open.science/r/scale-bayesian-tom-248B">project page</a>
-              /
-              <a href="https://drive.google.com/file/d/1vnAb1dy5_RJcA1vvSPP00u57sBi2hQp9/view?usp=sharing">preprint</a>
-              <p></p>
-            </td>
-          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+	  <td style="padding:20px;width:25%;vertical-align:middle">
+	    <div class="one">
+	      <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+	<!--      <source src="images/fdnas_after.mp4" type="video/mp4">-->
+	      Your browser does not support the video tag.
+	      </video></div>
+	      <img src='images/vlm.png' width="160">
+	    </div>
+	    <script type="text/javascript">
+	      function fdnas_start() {
+	        document.getElementById('fdnas_image').style.opacity = "1";
+	      }
+	
+	      function fdnas_stop() {
+	        document.getElementById('fdnas_image').style.opacity = "0";
+	      }
+	      fdnas_stop()
+	    </script>
+	  </td>
+	  <td style="padding:20px;width:75%;vertical-align:middle">
+	    <a href="">
+	      <papertitle>Overcoming Multi-step Complexity in Theory-of-Mind Reasoning: A Scalable Bayesian Planner</papertitle>
+	    </a>
+	    <br>
+	    <b>Chunhui Zhang</b>, Zhongyu Ouyang, Kwonjoon Lee, Nakul Agarwal, Sean Dae Houlihan, Soroush Vosoughi, Shao-Yuan Lo
+	    <br>
+	    <em>Forty-Second International Conference on Machine Learning (ICML), 2025</em>  – <strong>Spotlight</strong>.
+	    <br>
+	    <br>
+	    <a href="https://anonymous.4open.science/r/scale-bayesian-tom-248B">project page</a>
+	    /
+	    <a href="https://drive.google.com/file/d/1vnAb1dy5_RJcA1vvSPP00u57sBi2hQp9/view?usp=sharing">preprint</a>
+	    <p></p>
+	  </td>
+	</tr>
 
 	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
@@ -293,7 +293,6 @@
 	      <br>
 	      <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference</em> – <strong>Oral Presentation</strong>.
 	      <br>
-<!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
               <a href="https://drive.google.com/file/d/1X2ZhJTzDQVkPnRedJJQJB_hHOECtqPUI/view?usp=sharing">project page</a>
               /
@@ -368,7 +367,6 @@
               <br>
                 <em>Annual Meeting of the Association for Computational Linguistics (ACL), 2024</em>  – <strong>Oral Presentation</strong>.
               <br>
-<!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
               <a href="https://github.com/yiren-jian/EVLGen">project page</a>
               /
@@ -376,11 +374,11 @@
               <p></p>
             </td>
           </tr>
+		
         <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
-<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
                 <img src='images/lip_align.png' width="160">
