--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <heading>Posts</heading>
 <p>
-  <span style="font-style: italic;">[May 1, 2025]</span> Spotlight at ICML 2025! Thanks to my excellent collaborators. Vancouver, here we come again! P.S. Catch me in ABQ today!
+  <span style="font-style: italic;">[May 01, 2025]</span> Spotlight at ICML 2025. Thanks to my excellent collaborators. Happy to revisit Vancouver!
 <br>	
 <p>
   <span style="font-style: italic;">[Apr 23, 2025]</span> I’ve released the project on GitHub: <a href="https://github.com/chunhuizng/audio-long-form-reasoner" target="_blank">audio-long-form-reasoner. First to implement Qwen2.5-Omni and vLLM for faster RL reasoning across audio and other unified modalities.</a>
