--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
                 <heading>Posts</heading>
 <p>
+  <span style="font-style: italic;">[May 15, 2025]</span> Four papers accepted at ACL 2025. Thanks to my excellent collaborators. See you in Vienna!
+<br>	
+<p>
   <span style="font-style: italic;">[May 01, 2025]</span> Spotlight at ICML 2025. Thanks to my excellent collaborators. Happy to revisit Vancouver!
 <br>	
 <p>
