--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <br>
 <!--                <span style="font-size: 90%;">-->
 <!--        I am grateful to the Brandeis CS department for their kind support.-->
-<!--        I am dedicated to help all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>-->
+<!--        I am dedicated to helping all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>-->
 <!--            </p>-->
 
             </td>
@@ -140,13 +140,165 @@
                 <em>Forty-Second International Conference on Machine Learning (ICML), 2025</em> – <strong>Spotlight</strong>.
               <br>
               <br>
-              <a href="https://anonymous.4open.science/r/scale-bayesian-tom-248B">project page</a>
+              <a href="https://github.com/chunhuizng/scale-bayesian-planner">project page</a>
               /
               <a href="https://drive.google.com/file/d/1vnAb1dy5_RJcA1vvSPP00u57sBi2hQp9/view?usp=sharing">preprint</a>
               <p></p>
             </td>
           </tr>
 
+	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/ACL25_Episodic_Memory.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Growing Through Experience: Scaling Episodic Grounding in Language Models</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>, Sirui Wang, Zhongyu Ouyang, Xiangchi Yuan, Soroush Vosoughi
+              <br>
+                <em>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em>.
+              <br>
+              <br>
+              <a href="">project page</a>
+              /
+              <a href="https://drive.google.com/file/d/1qOiTlGbLJGe6Ake75bz7CaJp2TsQoXUr/view?usp=sharing">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+
+	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/ACL_alaska.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Visibility as Survival: Generalizing NLP for Native Alaskan Language Identification</papertitle>
+              </a>
+              <br>
+              Ivory Yang, <b>Chunhui Zhang</b>, Yuxin Wang, Zhongyu Ouyang, Soroush Vosoughi
+              <br>
+                <em>Findings of The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em>.
+              <br>
+              <br>
+              <a href="https://github.com/ivoryayang/GenAlaskan">project page</a>
+              /
+              <a href="">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+		  
+	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/ACL25_music.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Learning Sparsity for Effective and Efficient Music Performance Question Answering</papertitle>
+              </a>
+              <br>
+              Xingjian Diao, Tianzhen Yang, <b>Chunhui Zhang</b>, Weiyi Wu, Ming Cheng, Jiang Gui
+              <br>
+                <em>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em>.
+              <br>
+              <br>
+              <a href="">project page</a>
+              /
+              <a href="">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+	
+	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/ACL_unlearning.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Modality-Aware Neuron Pruning for Unlearning in Multimodal Large Language Models</papertitle>
+              </a>
+              <br>
+              Zheyuan Liu, Guangyao Dou, Xiangchi Yuan, <b>Chunhui Zhang</b>, Zhaoxuan Tan, Meng Jiang
+              <br>
+                <em>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em>.
+              <br>
+              <br>
+              <a href="https://github.com/franciscoliu/MANU">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2502.15910">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+		  
 	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
