--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang/張春晖), a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, fortunately working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟Professor Soroush Vosoughi</a>.
+<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang / 張春晖), currently working as a research intern at <a href="https://deepmind.google/">Google DeepMind</a>, Mountain View, CA. I am a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, where I have the great fortune of working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟Professor Soroush Vosoughi</a>. </p>
 
 <p>I earned my MSCS degree (research-based) and was honored with the <strong>GSAS Fellowship</strong> at <a href="https://www.brandeis.edu/">Brandeis University</a>. My research journey began at <a href="https://english.neu.edu.cn/">Northeastern University</a>, where I obtained a Bachelor's degree in CS and received the <strong>Outstanding Honor Thesis Award</strong>.</p>
 
@@ -72,6 +72,9 @@
 
                 <heading>Posts</heading>
 <p>
+  <span style="font-style: italic;">[Jun 2025]</span> Started as a research intern at Google DeepMind, Mountain View, CA. Excited to meet friends in the Bay Area!
+<br>
+<p>
   <span style="font-style: italic;">[May 15, 2025]</span> Four papers accepted at ACL 2025. Thanks to my excellent collaborators. See you in Vienna!
 <br>	
 <p>
@@ -83,11 +86,8 @@
 <p>
   <span style="font-style: italic;">[Jan 22, 2025]</span> Three papers are accepted to NAACL 2025. Thanks to my excellent collaborators. See you in Albuquerque!
 <br>	
-                <p>
-  <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators. See you in Miami!
-<br>
 <p>
-             <span style="font-style: italic;">[Sep 7, 2024]</span> Completed my summer internship at the Honda Research Institute in San Jose, CA. I am grateful for the collaborative experience with Dr. Shao-Yuan Lo and happy to have met great friends in the Bay Area.
+  <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators. See you in Miami!
 <br>
 <!--                <span style="font-size: 90%;">-->
 <!--        I am grateful to the Brandeis CS department for their kind support.-->
