--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <heading>Posts</heading>
 <p>
-  <span style="font-style: italic;">[Jun 2025]</span> Started as a research intern at Google DeepMind, Mountain View, CA. Excited to meet friends in the Bay Area!
+  <span style="font-style: italic;">[Jun 2025]</span> Started as a research intern at <a href="https://deepmind.google/">Google DeepMind, Mountain View, CA</a>. Excited to meet friends in the Bay Area!
 <br>
 <p>
   <span style="font-style: italic;">[May 15, 2025]</span> Four papers accepted at ACL 2025. Thanks to my excellent collaborators. See you in Vienna!
