Update pdf link

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <br>
               <a href="https://github.com/chunhuizng/scale-bayesian-planner">project page</a>
               /
-              <a href="https://drive.google.com/file/d/1vnAb1dy5_RJcA1vvSPP00u57sBi2hQp9/view?usp=sharing">preprint</a>
+              <a href="https://arxiv.org/pdf/2506.01301">preprint</a>
               <p></p>
             </td>
           </tr>
@@ -178,9 +178,9 @@
                 <em>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em>.
               <br>
               <br>
-              <a href="">project page</a>
+              <a href="https://github.com/chunhuizng/episodic-mcts/tree/main">project page</a>
               /
-              <a href="https://drive.google.com/file/d/1qOiTlGbLJGe6Ake75bz7CaJp2TsQoXUr/view?usp=sharing">preprint</a>
+              <a href="https://arxiv.org/pdf/2506.01312">preprint</a>
               <p></p>
             </td>
           </tr>
