--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <span style="font-style: italic;">[Jun 2025]</span> Started as a research intern at <a href="https://deepmind.google/">Google DeepMind, Mountain View, CA</a>. Excited to meet friends in the Bay Area!
 <br>
 <p>
-  <span style="font-style: italic;">[May 15, 2025]</span> Four papers accepted at ACL 2025. Thanks to my excellent collaborators. See you in Vienna!
+  <span style="font-style: italic;">[May 15, 2025]</span> Four papers accepted at ACL 2025 (one is selected as oral presentation). Thanks to my excellent collaborators. See you in Vienna!
 <br>	
 <p>
   <span style="font-style: italic;">[May 01, 2025]</span> Spotlight at ICML 2025. Thanks to my excellent collaborators. Happy to revisit Vancouver!
@@ -175,7 +175,7 @@
               <br>
               <b>Chunhui Zhang</b>, Sirui Wang, Zhongyu Ouyang, Xiangchi Yuan, Soroush Vosoughi
               <br>
-                <em>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em>.
+                <em>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</em> – <strong>Oral Presentation</strong>.
               <br>
               <br>
               <a href="https://github.com/chunhuizng/episodic-mcts/tree/main">project page</a>
