--- a/index.html
+++ b/index.html
@@ -227,7 +227,46 @@
             </td>
           </tr>
 		  
-	  
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/twm.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Knowing More, Acting Better: Hierarchical Representation for Embodied Decision-Making</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>, Zhongyu Ouyang, Xingjian Diao, Zheyuan Liu, Soroush Vosoughi
+              <br>
+                <em>The 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP 2025) Findings.</em>
+		<br>
+		<br>It refines vision-language model representations to enable more effective PPO-based RL training in embodied AI.
+              <br>
+              <br>
+              <a href="">project page</a>
+              /
+              <a href="">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+	
 	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
