--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
                 <heading>Posts</heading>
 <p>
+  <span style="font-style: italic;">[Aug 21, 2025]</span> Three papers are accepted to EMNLP 2025. Thanks to my excellent collaborators. See you in Suzhou!
+<br>
+<p>
   <span style="font-style: italic;">[Jun 2025]</span> Started as a research intern at <a href="https://deepmind.google/">Google DeepMind, Mountain View, CA</a>. Excited to meet friends in the Bay Area!
 <br>
 <p>
@@ -86,9 +89,6 @@
 <p>
   <span style="font-style: italic;">[Jan 22, 2025]</span> Three papers are accepted to NAACL 2025. Thanks to my excellent collaborators. See you in Albuquerque!
 <br>	
-<p>
-  <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators. See you in Miami!
-<br>
 <!--                <span style="font-size: 90%;">-->
 <!--        I am grateful to the Brandeis CS department for their kind support.-->
 <!--        I am dedicated to helping all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>-->
@@ -235,7 +235,7 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
-                <img src='images/twm.png' width="160">
+                <img src='images/vla-emnlp2025.png' width="160">
               </div>
               <script type="text/javascript">
                 function fdnas_start() {
