Update personal introduction in index.html
Removed mention of current internship and adjusted timeline.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang / 張春晖), currently working as a research intern at <a href="https://deepmind.google/">Google DeepMind</a>, Mountain View, CA. I am a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, where I have the great fortune of working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟Professor Soroush Vosoughi</a>. </p>
+<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang / 張春晖). I am a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, where I have the great fortune of working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟Professor Soroush Vosoughi</a>. From June to September of 2025, I was a research intern at <a href="https://deepmind.google/">Google DeepMind</a>, Mountain View, CA.</p>
 
 <p>I earned my MSCS degree (research-based) and was honored with the <strong>GSAS Fellowship</strong> at <a href="https://www.brandeis.edu/">Brandeis University</a>. My research journey began at <a href="https://english.neu.edu.cn/">Northeastern University</a>, where I obtained a Bachelor's degree in CS and received the <strong>Outstanding Honor Thesis Award</strong>.</p>
 
