--- a/index.html
+++ b/index.html
@@ -375,13 +375,51 @@
               <br>
 
               <br>
-              <a href="https://github.com/chunhuizng/working-memory-limits">project page</a>
+              <a href="https://arxiv.org/pdf/2506.12935">project page</a>
               /
               <a href="data/EMNLP24_Working_Memory.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
-		  
+
+		<tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/emnlp2025-soundmind.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>SoundMind: RL-Incentivized Logic Reasoning for Audio-Language Models</papertitle>
+              </a>
+              <br>
+              Xingjian Diao, <b>Chunhui Zhang</b>, Keyi Kong, Weiyi Wu, Chiyu Ma, Zhongyu Ouyang, Peijun Qing, Soroush Vosoughi, Jiang Gui
+              <br>
+                <em>The 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2025</em>.
+              <br>
+
+              <br>
+              <a href="https://arxiv.org/pdf/2506.12935">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2506.12935">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+		
 	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
