Add 'Oral Presentation' to conference details

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
               <br>
               Xingjian Diao, <b>Chunhui Zhang</b>, Keyi Kong, Weiyi Wu, Chiyu Ma, Zhongyu Ouyang, Peijun Qing, Soroush Vosoughi, Jiang Gui
               <br>
-                <em>The 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2025</em>.
+                <em>The 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2025</em> – <strong>Oral Presentation</strong>.
               <br>
 
               <br>
