--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
 
               <br>
-              <a href="https://arxiv.org/pdf/2506.12935">project page</a>
+              <a href="https://github.com/chunhuizng/working-memory-limits">project page</a>
               /
               <a href="data/EMNLP24_Working_Memory.pdf">preprint</a>
               <p></p>
