--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
               <heading>Selected Publications</heading>
               <p style="font-size:95%;">
-                <b>★ Core Contributions</b> — Key papers showcasing my work on RL training and multimodal systems. <a href="https://scholar.google.com.hk/citations?hl=en&user=jlqnbkAAAAAJ&view_op=list_works&sortby=pubdate">Full publication list (30+ papers)</a>
+                <b>★ Core Contributions</b> — Key papers about my work on RL training and multimodal LLM reasoning. <a href="https://scholar.google.com.hk/citations?hl=en&user=jlqnbkAAAAAJ&view_op=list_works&sortby=pubdate">Full publication list (30+ papers)</a>
               </p>
             </td>
           </tr>
@@ -186,7 +186,7 @@
               <br>
                 <em>EMNLP 2025 Findings</em>
 		<br>
-              <a href="">Code (coming soon)</a> / <a href="">Paper</a>
+              <a href="">Paper</a>
             </td>
           </tr>
 
@@ -212,24 +212,7 @@
             </td>
           </tr>
 
-        </tbody></table>
-
-<hr style="border:0; height:1px; background-image:linear-gradient(to right, transparent, #ddd, transparent);">
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Selected Collaborations</heading>
-              <p style="font-size:90%;">
-                Projects where I contributed as co-author or mentor. <a href="https://scholar.google.com.hk/citations?hl=en&user=jlqnbkAAAAAJ&view_op=list_works&sortby=pubdate">View all publications →</a>
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-		<tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+    <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src='images/twm.png' width="160">
             </td>
@@ -244,7 +227,25 @@
 		<br>
               <a href="https://github.com/xid32/NAACL_2025_TWM">Code</a> / <a href="https://xid32.github.io/images/publications/Temporal_Working_Memory.pdf">Paper</a>
             </td>
+    </tr>
+        </tbody></table>
+
+
+
+<hr style="border:0; height:1px; background-image:linear-gradient(to right, transparent, #ddd, transparent);">
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Selected Collaborations</heading>
+              <p style="font-size:90%;">
+                Projects where I contributed as co-author. <a href="https://scholar.google.com.hk/citations?hl=en&user=jlqnbkAAAAAJ&view_op=list_works&sortby=pubdate">View all publications →</a>
+              </p>
+            </td>
           </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 	<tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
