Enhance conference presentation details in index.html
Added detailed descriptions for various conference presentations, highlighting key contributions and links to code and papers.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
                 <em>ICML 2025</em> – <strong>Spotlight (Top 2.59%)</strong>
               <br>
               <a href="https://github.com/chunhuizng/scale-bayesian-planner">Code</a> / <a href="https://arxiv.org/pdf/2506.01301">Paper</a>
+              <br>
+              <p style="font-size:90%; margin-top:8px; color:#555;">
+                First scalable solution for multi-step Theory-of-Mind reasoning. Uses Bayesian inverse planning for global planning, then lets LLMs focus on local reasoning. Works on 70B+ models where others fail.
+              </p>
             </td>
           </tr>
 
@@ -143,6 +147,10 @@
                 <em>ACL 2025</em> – <strong>Oral Presentation (Top 3.24%)</strong>
               <br>
               <a href="https://github.com/chunhuizng/episodic-mcts/tree/main">Code</a> / <a href="https://arxiv.org/pdf/2506.01312">Paper</a>
+              <br>
+              <p style="font-size:90%; margin-top:8px; color:#555;">
+                Post-trained reasoning LLMs (across 3B, 8B, 70B) on MCTS-sampled data from physical simulators. This bridges the gap between simulation and real-world planning.
+              </p>
             </td>
           </tr>
 
@@ -165,6 +173,10 @@
 	      <em>NAACL 2025 Main Conference</em> – <strong>Oral Presentation (Top 2.88%)</strong>
 	      <br>
               <a href="https://github.com/chunhuizng/mllm-video-captioner">Code</a> / <a href="https://arxiv.org/pdf/2502.13363">Paper</a> / <a href="data/naacl-video-captioner-slides.pdf">Slides</a>
+              <br>
+              <p style="font-size:90%; margin-top:8px; color:#555;">
+                RL post-training recipe that achieved <b>Top-2</b> on PapersWithCode video captioning leaderboard, outperforming industry MLLM captioners. Clean, reproducible code that others can actually use.
+              </p>
             </td>
           </tr>
 		  
@@ -187,6 +199,10 @@
                 <em>EMNLP 2025 Findings</em>
 		<br>
               <a href="">Paper</a>
+              <br>
+              <p style="font-size:90%; margin-top:8px; color:#555;">
+                Refines vision-language-action LLM representations to enable more effective PPO-based RL training in embodied AI.
+              </p>
             </td>
           </tr>
 
@@ -209,6 +225,10 @@
                 <em>EMNLP 2024</em>
               <br>
               <a href="https://github.com/chunhuizng/working-memory-limits">Code</a> / <a href="data/EMNLP24_Working_Memory.pdf">Paper</a>
+              <br>
+              <p style="font-size:90%; margin-top:8px; color:#555;">
+                Introduced working memory as a diagnostic tool for LLM reasoning limits. This work inspired a follow-up NAACL paper on long-context multimodal understanding.
+              </p>
             </td>
           </tr>
 
@@ -226,6 +246,10 @@
                 <em>NAACL 2025 Findings</em>
 		<br>
               <a href="https://github.com/xid32/NAACL_2025_TWM">Code</a> / <a href="https://xid32.github.io/images/publications/Temporal_Working_Memory.pdf">Paper</a>
+              <br>
+              <p style="font-size:90%; margin-top:8px; color:#555;">
+                Inspired by working memory in my EMNLP 2024 paper, this work is a follow-up study on long-context multimodal understanding.
+              </p>
             </td>
     </tr>
         </tbody></table>
