--- a/index.html
+++ b/index.html
@@ -356,6 +356,40 @@
             </td>
           </tr>
 
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src='images/lip_align.png' width="160">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="https://github.com/chunhuizng/lipschitz-fairness">
+                <papertitle>Aligning Relational Learning with Lipschitz Fairness</papertitle>
+              </a>
+              <br>
+              Yaning Jia, <b>Chunhui Zhang</b>, Soroush Vosoughi
+              <br>
+                <em>ICLR 2024</em>
+              <br>
+              <a href="https://github.com/chunhuizng/lipschitz-fairness">Code</a> / <a href="data/ICLR24_Lipschitz_Align_camera_ready.pdf">Paper</a>
+            </td>
+          </tr>
+
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src='images/emergent-degradation.png' width="160">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="https://openreview.net/forum?id=Koh0i2u8qX">
+                <papertitle>Mitigating Emergent Robustness Degradation on Graphs while Scaling Up</papertitle>
+              </a>
+              <br>
+              Xiangchi Yuan, <b>Chunhui Zhang</b>, Yijun Tian, Yanfang Ye, et al.
+              <br>
+                <em>ICLR 2024</em>
+              <br>
+              <a href="https://github.com/chunhuizng/emergent-degradation">Code</a> / <a href="https://openreview.net/forum?id=Koh0i2u8qX">Paper</a>
+            </td>
+          </tr>
+
         </tbody></table>
 
 <hr style="border:0; height:1px; background-image:linear-gradient(to right, transparent, #ddd, transparent);">
